--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>D3 JS intro </title>
+  
     <script src="https://d3js.org/d3-scale.v3.min.js"></script>
     <script src="https://d3js.org/d3.v6.min.js"></script>
     <script src="app.js" defer ></script>
@@ -33,7 +34,17 @@
 
     </svg>
     
-  
+    <div class="container">
+ 
+        <div class="jumbotron">
+ 
+        </div>
+ 
+    </div>
+
+    <svg id="visualisation" width="1000" height="500"></svg>
+
+
 
 </body>
 </html>
